<resources>
    <string name="app_name" translatable="false">JoyMobile</string>
    <string name="add_tag">Add tag</string>
    <string name="profile">Profile</string>
    <string name="main_sections">Main Sections</string>
    <string name="tags">Tags</string>
    <string name="fendoms">Femdoms</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="favorite">Favorite</string>
    <string name="feed">Feed</string>
    <string name="post_activity">Post</string>
    <string name="create_tag">Create tag</string>
    <string name="tag_name">Tag name</string>
    <string name="example_tag">Example: Android, Anime</string>
    <string name="required_field">Required field</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Sign out</string>
    <string name="activity_private_messages">Private messages</string>
    <string name="new_posts">New posts</string>
    <string name="apply_caps">APPLY</string>
    <string name="old_posts">old posts</string>
    <string name="rating">Rating:</string>
    <string name="star_progress">New star progress:</string>
    <string name="login_error">Can\'t login. Try later.</string>
    <string name="your_new_message_here">Your new message here…</string>
    <string name="you_are_not_authorized">You are not authorized</string>
    <string name="send_feedback">Send feedback</string>
    <string name="updates_available">Updates available</string>
    <string name="open">Open</string>
    <string name="write_feedback">Write feedback</string>
    <string name="error_email_client_not_installed">You don\'t have any email client installed.</string>
    <string name="unknow_error">Error. Try again later.</string>
    <string name="authorization">Authorization</string>
    <string name="get_profile">Get profile</string>
    <string name="write_comment">Write comment</string>
    <string name="reply">Reply</string>
    <string name="new_messages">You have new private messages</string>
    <string name="click_to_open">Click to show</string>
    <string name="private_message_service_label">Check new private messages</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="comment_sent">Comment sent</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>

    <string name="title_activity_login">Login</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="messages">Messages</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="save_image_to_gallery">Save to gallery</string>
    <string name="image_saved_to_gallery">Image saved to gallery</string>
    <string name="title_activity_create_comment">Create comment</string>
    <string name="create">Create</string>
    <string name="update_in_progress">Update in progress…</string>
    <string name="show_more">Show More</string>
    <string name="images">Images</string>
    <string name="post_images">Post images</string>
    <string name="similar_posts">Similar posts</string>
    <string name="comments">Comments</string>
    <string name="login_message">Login To Have More Fun</string>
    <string name="update">Update</string>
    <string name="reload">Reload</string>

    <string name="new_">New</string>
    <string name="good">Good</string>
    <string name="best">Best</string>
    <string name="blog">Blog</string>
    <string name="feedback">Feedback</string>
</resources>
